--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
+    "react-i18next": "^11.15.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
