--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "sass-loader": "^12.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
