--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -13,7 +13,9 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v2
+         uses: actions/checkout@v2
+         with:
+          node-version: "17"
 
       - name: Install
         run: npm install
