--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -16,6 +16,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install
-        run: npm install
+        run: npm install --force
       - name: Build
         run: npm run build
