FIX: Footer UI bug on FAQs page

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --watch",
     "build": "react-scripts build",
     "test": "jest --watchAll",
     "eject": "react-scripts eject"
